Create containers and place the content

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,87 +1,53 @@
 <footer>
   <!-- FLECHA ARRIBA - IMAGEN CENTRADA Y TRASLADADA -->
-  <a href=""></a>
+  <div class="footer-arrow-container">
+    <div class="footer-arrow-content">
+      <a class="footer-arrow" href=""><img src="../assets/images/ico-arrow.svg" alt=""/></a>
+    </div>
+  </div>
   <!-- NAVEGADORES FOOTER. Para que el copyright quede a la izquierda en mobile, meterle un flex-direction:column reverse 
   A los navegadores se les deja caer, deberían posicionarse solos en mobile.
   En tablet, se ponen ambos divs en row-->
-  <div>
-    <small>
-      ©2017
-    </small>
-    <small>we ❤︎ components</small>
-  </div>
-  <div>
-    <nav class="articles">
-      <ul>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Articles
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Books
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Events
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Reasons
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Tips
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <nav class="social">
-      <ul>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Twitter
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Instagram
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://adalab.es/"
-            alt="Link to Adalab"
-            title="Link to Adalab"
-            >Mastodon.social
-          </a>
-        </li>
-      </ul>
-    </nav>
+  <div class="footer-content">
+    <div class="footer-copy">
+      <span>
+        ©2017
+      </span>
+      <span>we &#10084; components</span>
+    </div>
+    <div class="footer-navs">
+      <nav class="articles">
+        <ul>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Articles</a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Books </a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Events </a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Reasons </a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Tips </a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="social">
+        <ul>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Twitter </a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Instagram </a>
+          </li>
+          <li>
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Mastodon.social </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </footer>
