--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,10 +1,8 @@
 <header>
   <div class="header-container">
-    <div class="header-menu">
+    <div class="header-arrow-contentainer">
       <!-- ICONO DE HAMBURGUESA -->
-      <a href="https://adalab.es/"
-        ><img src="../assets/images/ico-menu.svg" alt="Menu"
-      /></a>
+      <a href="https://adalab.es/"><img src="../assets/images/ico-menu.svg" alt="Menu"/></a>
     </div>
     <div class="header-contain">
       <h1 class="header-title">Anonymous Proxy</h1>
