--- a/_src/templates/partials/_section.html
+++ b/_src/templates/partials/_section.html
@@ -1,5 +1,5 @@
 <section>
-  <div>
+  <div class="section-container">
     <small>Insomnia Tips</small>
     <h2>Looking Through A Window</h2>
     <p>
