--- a/_src/assets/scss/components/_page.scss
+++ b/_src/assets/scss/components/_page.scss
@@ -5,8 +5,7 @@ body {
   margin: 0px;
 }
 
-// HEADER STILOS DE CAJAS (SOLO CAJAS, NADA DE BONITECES
-
+// HEADER
 .header-container {
   height: 100vh;
 }
@@ -21,11 +20,92 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-
   justify-content: flex-end;
 }
-.header-button {
+.header-arrow {
   background-color: orange;
 }
 
 // SECTION
+
+.section-container {
+  height: 360px;
+}
+
+// ASIDE
+
+.aside-container {
+  display: grid;
+  width: 100vw;
+  height: 427px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+}
+
+.item1 {
+  grid-column: span 3;
+  grid-row: span 3;
+  background-color: fuchsia;
+  align-self: center;
+  text-align: center;
+}
+
+.item2 {
+  grid-column: span 1;
+  grid-row: span 2;
+  background-color: coral;
+  text-align: center;
+}
+.item3 {
+  grid-column: span 1;
+  grid-row: span 2;
+  background-color: greenyellow;
+  text-align: center;
+}
+.item4 {
+  grid-column: span 1;
+  grid-row: span 2;
+  background-color: yellow;
+  text-align: center;
+}
+
+.item5 {
+  grid-column: span 3;
+  grid-row: span 3;
+  background-color: fuchsia;
+  text-align: center;
+  align-self: center;
+}
+
+// FOOTER
+.footer-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.footer-navs {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-copy {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-arrow-container {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+.footer-arrow-content {
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  transform: translateY(-55%);
+  background-color: coral;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
