--- a/_src/templates/partials/_aside.html
+++ b/_src/templates/partials/_aside.html
@@ -1,24 +1,23 @@
-<aside>
+<aside class="aside-container">
   <!-- CON GRID. TITULO A 12 COLUMNAS, APARTADOS A 4, BOTON A 12  -->
-  <div>
-    <div>
-      <h2>3 Reasons To Purchase</h2>
-    </div>
-    <div>
-      <h3>Ut sed metus</h3>
-      <p>Lorem ipsum dolor sit amet, consecteur.</p>
-    </div>
-    <div>
-      <h3>Curabitur ac erat</h3>
-      <p>Mauris mattis urna quis lorem molestie.</p>
-    </div>
-    <div>
-      <h3>Morbi dictum</h3>
-      <p>Aliquam in dolor et dolor tincidunt.</p>
-    </div>
-    <div>
-      <!-- botón naranja de More Reasons -->
-      <a href="">More reasons</a>
-    </div>
+
+  <div class="item1">
+    <h2>3 Reasons To Purchase</h2>
+  </div>
+  <div class="item2">
+    <h3>Ut sed metus</h3>
+    <p>Lorem ipsum dolor sit amet, consecteur.</p>
+  </div>
+  <div class="item3">
+    <h3>Curabitur ac erat</h3>
+    <p>Mauris mattis urna quis lorem molestie.</p>
+  </div>
+  <div class="item4">
+    <h3>Morbi dictum</h3>
+    <p>Aliquam in dolor et dolor tincidunt.</p>
+  </div>
+  <div class="item5">
+    <!-- botón naranja de More Reasons -->
+    <a href="">More reasons</a>
   </div>
 </aside>
