Add background, main styles and menu

--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -2,7 +2,7 @@
 $font-main: "Roboto", sans-serif;
 
 // colors
-$color-white: #ffffff;
+$colorWhite: #ffffff;
 $colorPrimary: #304268;
 $color-secondary: #0271bc;
 $colorTerciary: #8ccbea;
