--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,14 +1,16 @@
 <header>
-  <div class="header-container">
-    <div class="header-arrow-contentainer">
-      <!-- ICONO DE HAMBURGUESA -->
-      <a href="https://adalab.es/"><img src="../assets/images/ico-menu.svg" alt="Menu"/></a>
+  <div class="header-menu-container">
+    <!-- ICONO DE HAMBURGUESA -->
+    <div class="header-menu-content">
+      <a href="https://adalab.es/" target="_blank"><img src="../assets/images/ico-menu.svg" alt="Menu"/></a>
     </div>
+  </div>
+  <div class="header-container">
     <div class="header-contain">
       <h1 class="header-title">Anonymous Proxy</h1>
       <p class="header-text">In hac habitasse platea dictumst.</p>
       <!-- ICONO DE LA FLECHA -->
-      <a class="header-button" href="">
+      <a class="header-arrow" href="">
         <img src="../assets/images/ico-scroll-down.svg" alt="" />
       </a>
     </div>
