Add main styles and margins

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "core/settings";
 @import "components/page";
 @import "core/header";
+@import "core/section";
 @import "core/footer";
 
 // Borrar estilos a partir de aquí
