--- a/_src/templates/partials/_section.html
+++ b/_src/templates/partials/_section.html
@@ -1,12 +1,11 @@
 <section>
   <div class="section-container">
-    <small>Insomnia Tips</small>
-    <h2>Looking Through A Window</h2>
-    <p>
-      Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
-      luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+    <small class="section-small-text">Insomnia Tips</small>
+    <h2 class="section-title">Looking Through A Window</h2>
+    <p class="section-text">
+      Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
     </p>
     <!-- BOTON DE GO -->
-    <a href=""></a>
+    <div class="section-button"><a href=""></a>Go</div>
   </div>
 </section>
