Add background-color and main font-styles

--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -5,5 +5,5 @@ $font-main: "Roboto", sans-serif;
 $colorWhite: #ffffff;
 $colorPrimary: #304268;
 $color-secondary: #0271bc;
-$colorTerciary: #8ccbea;
+$colorTerciary: #eff9ff;
 $colorButtons: #f26002;
