improve the button

--- a/_src/templates/partials/_aside.html
+++ b/_src/templates/partials/_aside.html
@@ -18,6 +18,6 @@
   </div>
   <div class="item5">
     <!-- botón naranja de More Reasons -->
-    <div class="aside-button-container"><a href="" style="text-decoration: none; color: red;">More reasons</a></div>
+    <div class="aside-button-container"><a class="aside-button-text" href="" style="text-decoration: none; color: white">More reasons</a></div>
   </div>
 </aside>
