--- a/_src/assets/scss/core/_aside.scss
+++ b/_src/assets/scss/core/_aside.scss
@@ -23,12 +23,12 @@
   color: black;
   font-size: 20px;
 }
-
 .item1 {
   grid-column: span 3;
   grid-row: span 3;
   align-self: center;
   text-align: center;
+  justify-content: center;
 }
 
 .item2 {
@@ -48,13 +48,18 @@
 }
 
 .item5 {
-  grid-column: span 3;
+  grid-column: 2 / 3;
   grid-row: span 3;
-  text-align: center;
+  width: 255px;
+  height: 45px;
+  background: $colorButtons;
   align-self: center;
-  color: $colorWhite;
+  justify-self: center;
+  vertical-align: middle;
+  border-radius: 22.5px;
 }
 
-.aside.button.container {
-  background-color: $colorButtons;
+.aside-button-container {
+  text-align: center;
+  vertical-align: text-bottom;
 }
