--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -37,7 +37,7 @@
   align-items: center;
   height: 44px;
   width: 44px;
-  background: $color-secondary;
+  background: $colorSecondary;
 }
 
 .header-arrow {
