--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -4,6 +4,6 @@ $font-main: "Roboto", sans-serif;
 // colors
 $colorWhite: #ffffff;
 $colorPrimary: #304268;
-$color-secondary: #0271bc;
+$colorSecondary: #0271bc;
 $colorTerciary: #eff9ff;
 $colorButtons: #f26002;
