--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,5 +1,6 @@
 // fonts
-$font-main: "Roboto", sans-serif;
+$fontPrimary: "Roboto Slab";
+$fontSecondary: "Roboto";
 
 // colors
 $colorWhite: #ffffff;
