--- a/_src/templates/partials/_aside.html
+++ b/_src/templates/partials/_aside.html
@@ -1,23 +1,24 @@
-<aside class="aside-container">
+<aside>
   <!-- CON GRID. TITULO A 12 COLUMNAS, APARTADOS A 4, BOTON A 12  -->
-
-  <div class="item1">
-    <h2 class="aside-title">3 Reasons To Purchase</h2>
-  </div>
-  <div class="item2">
-    <h3 class="aside-subtitle">Ut sed metus</h3>
-    <p class="aside-text">Lorem ipsum dolor sit amet, consecteur.</p>
-  </div>
-  <div class="item3">
-    <h3 class="aside-subtitle">Curabitur ac erat</h3>
-    <p class="aside-text">Mauris mattis urna quis lorem molestie.</p>
-  </div>
-  <div class="item4">
-    <h3 class="aside-subtitle">Morbi dictum</h3>
-    <p class="aside-text">Aliquam in dolor et dolor tincidunt.</p>
-  </div>
-  <div class="item5">
-    <!-- botón naranja de More Reasons -->
-    <div class="aside-button-container"><a class="aside-button-text" href="" style="text-decoration: none; color: white">More reasons</a></div>
+  <div class="aside-container">
+    <div class="item1">
+      <h2 class="aside-title">3 Reasons To Purchase</h2>
+    </div>
+    <div class="item2">
+      <h3 class="aside-subtitle">Ut sed metus</h3>
+      <p class="aside-text">Lorem ipsum dolor sit amet, consecteur.</p>
+    </div>
+    <div class="item3">
+      <h3 class="aside-subtitle">Curabitur ac erat</h3>
+      <p class="aside-text">Mauris mattis urna quis lorem molestie.</p>
+    </div>
+    <div class="item4">
+      <h3 class="aside-subtitle">Morbi dictum</h3>
+      <p class="aside-text">Aliquam in dolor et dolor tincidunt.</p>
+    </div>
+    <div class="item5">
+      <!-- botón naranja de More Reasons -->
+      <a class="aside-button-text" href="" style="text-decoration: none; color: white">More reasons</a>
+    </div>
   </div>
 </aside>
