--- a/_src/templates/partials/_head.html
+++ b/_src/templates/partials/_head.html
@@ -3,9 +3,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Adalab Web Starter Kit</title>
   <link rel="icon" href="./favicon.png" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <style>
+    @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap");
+  </style>
+  <style>
+    @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
+  </style>
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
