--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -2,7 +2,7 @@
   <!-- FLECHA ARRIBA - IMAGEN CENTRADA Y TRASLADADA -->
   <div class="footer-arrow-container">
     <div class="footer-arrow-content">
-      <a class="footer-arrow" href=""><img src="../assets/images/ico-arrow.svg" alt=""/></a>
+      <a class="footer-arrow" href="#hero"><img src="../assets/images/ico-arrow.svg" alt=""/></a>
     </div>
   </div>
   <!-- NAVEGADORES FOOTER. Para que el copyright quede a la izquierda en mobile, meterle un flex-direction:column reverse 
@@ -13,38 +13,42 @@
       <span>
         ©2017
       </span>
-      <span>we &#10084; components</span>
+      <span
+        >we
+        <small class="heart">&#10084;</small>
+        components</span
+      >
     </div>
     <div class="footer-navs">
       <nav class="articles">
         <ul>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Articles</a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Articles</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Books </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Books</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Events </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Events</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Reasons </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Reasons</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Tips </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Tips</a>
           </li>
         </ul>
       </nav>
       <nav class="social">
         <ul>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Twitter </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Twitter</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Instagram </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Instagram</a>
           </li>
-          <li>
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab">Mastodon.social </a>
+          <li style="list-style-type: none;">
+            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Mastodon.social</a>
           </li>
         </ul>
       </nav>
