--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,7 +1,8 @@
 <header>
+  <a name="hero" id="hero"></a>
   <div class="header-menu-container">
     <!-- ICONO DE HAMBURGUESA -->
-    <div class="header-menu-content">
+    <div id="menu" class="header-menu-content">
       <a href="https://adalab.es/" target="_blank"><img src="../assets/images/ico-menu.svg" alt="Menu"/></a>
     </div>
   </div>
