--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -8,11 +8,11 @@
   </div>
   <div class="header-container">
     <div class="header-contain">
-      <h1 class="header-title">Anonymous Proxy</h1>
+      <h1 class="header-title"><span>Anonymous</span> <span>Proxy</span></h1>
       <p class="header-text">In hac habitasse platea dictumst.</p>
       <!-- ICONO DE LA FLECHA -->
-      <a class="header-arrow" href="">
-        <img src="../assets/images/ico-scroll-down.svg" alt="" />
+      <a class="header-arrow" href="#aside">
+        <img src="../assets/images/ico-scroll-down.svg" alt="Flecha hacia '3 Reasons To Purchase'" />
       </a>
     </div>
   </div>
