--- a/_src/assets/scss/core/_section.scss
+++ b/_src/assets/scss/core/_section.scss
@@ -1,16 +1,23 @@
 // SECTION
 
 .section-container {
-  width: 100vw;
   height: max-content;
-  margin: 60px 275px 60px 275px;
+  justify-content: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
+.section-content {
+  margin-top: 60px;
+  width: 730px;
+  margin-bottom: 60px;
+}
 .section-small-text {
   width: 360px;
   height: 30px;
   color: #8ccbea;
-  font-size: 16px;
 }
 
 .section-title {
@@ -38,7 +45,6 @@
   height: 45px;
   border: 2px solid $colorButtons;
   border-radius: 22.5px;
-  margin-bottom: 60px;
   transition-duration: 1s;
   &:hover {
     box-shadow: 0px 0px 15px 15px #f25e0294;
