--- a/_src/templates/partials/_section.html
+++ b/_src/templates/partials/_section.html
@@ -1,11 +1,13 @@
 <section>
   <div class="section-container">
-    <small class="section-small-text">Insomnia Tips</small>
-    <h2 class="section-title">Looking Through A Window</h2>
-    <p class="section-text">
-      Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
-    </p>
-    <!-- BOTON DE GO -->
-    <div class="section-button"><a href=""></a>Go</div>
+    <div class="section-content">
+      <small class="section-small-text">Insomnia Tips</small>
+      <h2 class="section-title">Looking Through A Window</h2>
+      <p class="section-text">
+        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+      </p>
+      <!-- BOTON DE GO -->
+      <div class="section-button"><a href=""></a>Go</div>
+    </div>
   </div>
 </section>
