--- a/_src/assets/scss/core/_aside.scss
+++ b/_src/assets/scss/core/_aside.scss
@@ -6,7 +6,7 @@
   width: 100vw;
   height: 427px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(9, 1fr);
   justify-content: center;
   align-items: center;
 }
@@ -20,15 +20,15 @@
 
 .item2 {
   grid-column: span 1;
-  grid-row: span 2;
+  grid-row: span 3;
   display: grid;
   text-align: center;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 .item3 {
   grid-column: span 1;
-  grid-row: span 2;
+  grid-row: span 3;
   display: grid;
   text-align: center;
   justify-content: center;
@@ -36,11 +36,11 @@
 }
 .item4 {
   grid-column: span 1;
-  grid-row: span 2;
+  grid-row: span 3;
   display: grid;
   text-align: center;
   justify-content: center;
-  align-items: center;
+  align-self: flex-start;
 }
 
 .item5 {
@@ -56,23 +56,27 @@
   justify-self: center;
   align-items: center;
   font-family: "Roboto", Medium;
+  transition: all 1s ease;
+  &:hover {
+    background: black;
+  }
 }
 
 .aside {
   &-title {
-    font-family: $fontPrimary;
-    color: black;
+    font-family: $fontPrimary, Bold;
     font-size: 32px;
+    line-height: 1.25;
   }
   &-subtitle {
-    color: black;
+    width: 350px;
     font-size: 24px;
-    font-family: $fontPrimary;
+    font-family: $fontPrimary, Bold;
   }
   &-text {
     padding: 26.2px;
+    line-height: 1.5;
     width: 358.5px;
-    color: black;
     font-size: 20px;
     font-family: "Roboto";
   }
