--- a/_src/templates/partials/_aside.html
+++ b/_src/templates/partials/_aside.html
@@ -1,5 +1,5 @@
-<aside class="aside-container">
-  <a name="aside" id="aside"></a>
+<aside>
+  <!-- CON GRID. TITULO A 12 COLUMNAS, APARTADOS A 4, BOTON A 12  -->
   <div class="aside-container">
     <div class="item1">
       <h2 class="aside-title">3 Reasons To Purchase</h2>
@@ -18,7 +18,7 @@
     </div>
     <div class="item5">
       <!-- botón naranja de More Reasons -->
-      <a class="aside-button-text" href="" style="text-decoration: none; color: white; font-size:20px">More reasons</a>
+      <a class="aside-button-text" href="" style="text-decoration: none; color: white">more reasons</a>
     </div>
   </div>
 </aside>
