--- a/_src/assets/scss/core/_footer.scss
+++ b/_src/assets/scss/core/_footer.scss
@@ -13,7 +13,7 @@
     flex-direction: row;
     text-transform: uppercase;
     font-size: 16px;
-    font-family: "Roboto", Regular;
+    font-family: $fontSecondary;
     line-height: 1.88;
     margin-bottom: 45px;
     & .articles {
@@ -28,9 +28,9 @@
     display: flex;
     flex-direction: column;
     width: 159px;
-    font-family: "Roboto", Regular;
-    font-size: 14px;
     height: 60px;
+    font-family: $fontSecondary;
+    font-size: 14px;
     line-height: 2.14;
     .heart {
       color: $colorButtons;
@@ -51,5 +51,61 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 1280px) {
+  .footer {
+    &-navs {
+      & .articles {
+        width: 210px;
+        margin-right: 30px;
+      }
+      & .social {
+        width: 210px;
+        margin-right: 39px;
+      }
+    }
+    &-copy {
+      width: 210px;
+      height: 60px;
+      margin-right: 30px;
+      margin-left: 39px;
+    }
+  }
+}
+
+@media all and (max-width: 768px) {
+  .footer {
+    &-content {
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+    }
+    &-navs {
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      margin-bottom: 0;
+      & .articles {
+        margin: auto;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        width: 73px;
+      }
+      & .social {
+        width: 147px;
+        margin: auto;
+        margin-bottom: 30px;
+      }
+    }
+    &-copy {
+      justify-content: center;
+      text-align: center;
+      width: 290px;
+      margin: auto;
+      margin-bottom: 45px;
+    }
   }
 }
