--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -12,17 +12,20 @@
   }
   &-title {
     width: 730px;
+    height: 264px;
     line-height: 1.32;
     font-size: 100px;
     font-family: "Roboto Slab", Bold;
     text-transform: uppercase;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
   }
   &-text {
     width: 730px;
+    height: 32px;
     line-height: normal;
     font-size: 24px;
     margin-bottom: 30px;
-    font-family: "Roboto";
+    font-family: $fontSecondary;
   }
   &-menu-container {
     display: flex;
@@ -39,7 +42,7 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    background-color: white;
+    background-color: $colorWhite;
     margin-bottom: 13px;
   }
 }
