--- a/_src/assets/scss/core/_section.scss
+++ b/_src/assets/scss/core/_section.scss
@@ -1,52 +1,58 @@
 // SECTION
 
-.section-container {
-  height: max-content;
-  justify-content: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
+.section {
+  &-container {
+    height: max-content;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  &-content {
+    margin-top: 60px;
+    width: 730px;
+    margin-bottom: 60px;
+  }
+  &-small-text {
+    font-family: $fontSecondary;
+    width: 360px;
+    height: 30px;
+    color: #8ccbea;
+  }
+  &-title {
+    font-family: $fontPrimary, Bold;
+    width: 730px;
+    height: 45px;
+    font-size: 32px;
+    line-height: 1.88;
+  }
+  &-text {
+    font-family: $fontSecondary;
+    line-height: 1.5;
+    font-size: 20px;
+    color: #4a4a4a;
+    width: 730px;
+    height: 60px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 
-.section-content {
-  margin-top: 60px;
-  width: 730px;
-  margin-bottom: 60px;
-}
-.section-small-text {
-  width: 360px;
-  height: 30px;
-  color: #8ccbea;
-}
-
-.section-title {
-  width: 730px;
-  height: 45px;
-  font-size: 32px;
-}
-
-.section-text {
-  font-size: 20px;
-  color: #4a4a4a;
-  width: 730px;
-  height: 60px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.section-button {
-  font-size: 20px;
-  color: $colorButtons;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 160px;
-  height: 45px;
-  border: 2px solid $colorButtons;
-  border-radius: 22.5px;
-  transition-duration: 1s;
-  &:hover {
-    box-shadow: 0px 0px 15px 15px #f25e0294;
+  &-button {
+    line-height: 2.25;
+    font-family: $fontSecondary, Medium;
+    font-size: 20px;
+    color: $colorButtons;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+    height: 45px;
+    border: 2px solid $colorButtons;
+    border-radius: 22.5px;
+    transition-duration: 1s;
+    &:hover {
+      box-shadow: 0px 0px 15px 15px #f25e0294;
+    }
   }
 }
