--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -46,3 +46,45 @@
     margin-bottom: 13px;
   }
 }
+
+@media all and (min-width: 768px) and (max-width: 1280px) {
+  .header {
+    &-title {
+      width: 690px;
+      height: 212px;
+      line-height: 1.33;
+      font-size: 80px;
+      text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+    }
+    &-text {
+      width: 360px;
+      height: 32px;
+      margin-top: 20px;
+      margin-bottom: 30px;
+    }
+    &-arrow {
+      margin-bottom: 45px;
+    }
+  }
+}
+
+@media all and (max-width: 768px) {
+  .header {
+    &-title {
+      width: 290px;
+      height: 110px;
+      line-height: 1.31;
+      font-size: 42px;
+    }
+    &-text {
+      font-size: 16px;
+      width: 290px;
+      height: 21px;
+      margin-top: 10px;
+      margin-bottom: 45px;
+    }
+    &-arrow {
+      margin-bottom: 53px;
+    }
+  }
+}
