--- a/_src/assets/scss/core/_section.scss
+++ b/_src/assets/scss/core/_section.scss
@@ -11,7 +11,6 @@
   }
   &-content {
     margin-top: 60px;
-    width: 730px;
     margin-bottom: 60px;
   }
   &-small-text {
@@ -53,6 +52,66 @@
     transition-duration: 1s;
     &:hover {
       box-shadow: 0px 0px 15px 15px #f25e0294;
+    }
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 1280px) {
+  .section {
+    &-small-text {
+      font-size: 14px;
+      width: 216px;
+      height: 30px;
+    }
+    &-title {
+      width: 690px;
+      height: 45px;
+      font-size: 26px;
+      line-height: 1.73;
+    }
+    &-text {
+      color: #4a4a4a;
+      width: 690px;
+      height: 60px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+    &-button {
+      width: 91px;
+      height: 45px;
+    }
+  }
+}
+
+@media all and (max-width: 768px) {
+  .section {
+    &-content {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    &-small-text {
+      margin-top: 30px;
+      width: 90px;
+      height: 30px;
+    }
+    &-title {
+      width: 290px;
+      height: 60px;
+      font-size: 24px;
+      line-height: 1.25;
+    }
+    &-text {
+      color: #4a4a4a;
+      width: 290px;
+      height: 120px;
+      font-size: 18px;
+      margin-top: 15px;
+      margin-bottom: 30px;
+      line-height: 1.67;
+    }
+    &-button {
+      width: 76px;
+      height: 45px;
     }
   }
 }
