Add mediaqueries in aside for tablet and mobile

--- a/_src/assets/scss/core/_aside.scss
+++ b/_src/assets/scss/core/_aside.scss
@@ -23,7 +23,6 @@
   display: grid;
   text-align: center;
   justify-content: center;
-  align-items: flex-start;
 }
 .item3 {
   grid-column: span 1;
@@ -31,7 +30,6 @@
   display: grid;
   text-align: center;
   justify-content: center;
-  align-items: center;
 }
 .item4 {
   grid-column: span 1;
@@ -88,5 +86,85 @@
     width: 358.5px;
     font-size: 20px;
     font-family: $fontSecondary;
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 1200px) {
+  .aside {
+    &-container {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+    }
+    &-title {
+      height: 45px;
+      font-size: 26px;
+      line-height: 1.73;
+    }
+    &-subtitle {
+      width: 210px;
+      height: 30px;
+      font-size: 24px;
+      line-height: 1.25;
+    }
+    &-text {
+      padding: 0;
+      width: 212.3px;
+      height: 68px;
+      line-height: 1.5;
+      font-size: 20px;
+    }
+  }
+  .item4 {
+    grid-column: span 1;
+    grid-row: span 3;
+    justify-content: center;
+  }
+  .item5 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .aside {
+    &-container {
+      height: 624px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(5, 1fr);
+    }
+    &-title {
+      height: 30px;
+      font-size: 24px;
+      line-height: 1.25;
+    }
+    &-subtitle {
+      width: 184px;
+      height: 30px;
+      font-size: 18px;
+      line-height: 1.67;
+    }
+    &-text {
+      width: 180px;
+      height: 63px;
+      padding: 0;
+      line-height: 1.67;
+      font-size: 18px;
+    }
+  }
+  .item1,
+  .item2,
+  .item3,
+  .item4 {
+    align-self: center;
+    grid-column: span 3;
+    grid-row: span 1;
+  }
+  .item5 {
+    align-self: center;
+    grid-column: span 3;
+    grid-row: span 1;
+    width: 184px;
+    height: 45px;
+    margin-bottom: 60px;
   }
 }
