--- a/_src/templates/partials/_aside.html
+++ b/_src/templates/partials/_aside.html
@@ -1,5 +1,5 @@
 <aside>
-  <!-- CON GRID. TITULO A 12 COLUMNAS, APARTADOS A 4, BOTON A 12  -->
+  <a name="aside" id="aside"></a>
   <div class="aside-container">
     <div class="item1">
       <h2 class="aside-title">3 Reasons To Purchase</h2>
