--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,5 +2,5 @@
 @import "components/page";
 @import "core/header";
 @import "core/section";
-@import "core/aside";
+@import "core/article";
 @import "core/footer";
