--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <partial src="_head.html" title=""></partial>
   <body>
-    <div class="page">
+    <div>
       <partial src="_header.html" title="Anonymous Proxy"></partial>
       <partial src="_section.html" title=""></partial>
-      <partial src="_aside.html" title=""></partial>
+      <partial src="_article.html" title=""></partial>
       <partial src="_footer.html" title=""></partial>
     </div>
   </body>
