--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -11,7 +11,7 @@
       <h1 class="header-title"><span>Anonymous</span> <span>Proxy</span></h1>
       <p class="header-text">In hac habitasse platea dictumst.</p>
       <!-- ICONO DE LA FLECHA -->
-      <a class="header-arrow" href="#aside">
+      <a class="header-arrow" href="#article">
         <img src="../assets/images/ico-scroll-down.svg" alt="Flecha hacia '3 Reasons To Purchase'" />
       </a>
     </div>
