--- a/_src/templates/partials/_head.html
+++ b/_src/templates/partials/_head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adalab Web Starter Kit</title>
+  <title>modulo-1-evaluacion-final-smgaragorri</title>
   <link rel="icon" href="./favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <style>
