fix images path

--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -3,7 +3,7 @@
   <div class="header-menu-container">
     <!-- ICONO DE HAMBURGUESA -->
     <div id="menu" class="header-menu-content">
-      <a href="https://adalab.es/" target="_blank"><img src="../assets/images/ico-menu.svg" alt="Menu"/></a>
+      <a href="https://adalab.es/" target="_blank"><img src="../images/ico-menu.svg" alt="Menu"/></a>
     </div>
   </div>
   <div class="header-container">
@@ -12,7 +12,7 @@
       <p class="header-text">In hac habitasse platea dictumst.</p>
       <!-- ICONO DE LA FLECHA -->
       <a class="header-arrow" href="#article">
-        <img src="../assets/images/ico-scroll-down.svg" alt="Flecha hacia '3 Reasons To Purchase'" />
+        <img src="../images/ico-scroll-down.svg" alt="Flecha hacia '3 Reasons To Purchase'" />
       </a>
     </div>
   </div>
