fix images path

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -2,7 +2,7 @@
   <!-- FLECHA ARRIBA - IMAGEN CENTRADA Y TRASLADADA -->
   <div class="footer-arrow-container">
     <div class="footer-arrow-content">
-      <a class="footer-arrow" href="#hero"><img src="./images/ico-arrow.svg" alt=""/></a>
+      <a class="footer-arrow" href="#hero"><img src="./assets/images/ico-arrow.svg" alt=""/></a>
     </div>
   </div>
   <!-- NAVEGADORES FOOTER. Para que el copyright quede a la izquierda en mobile, meterle un flex-direction:column reverse 
