--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,8 +1,8 @@
-// fonts
+// FONTS
 $fontPrimary: "Roboto Slab";
 $fontSecondary: "Roboto";
 
-// colors
+// COLORS PALETTE
 $colorWhite: #ffffff;
 $colorPrimary: #304268;
 $colorSecondary: #0271bc;
