--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,13 +1,9 @@
 <footer>
-  <!-- FLECHA ARRIBA - IMAGEN CENTRADA Y TRASLADADA -->
   <div class="footer-arrow-container">
     <div class="footer-arrow-content">
-      <a class="footer-arrow" href="#hero"><img src="./assets/images/ico-arrow.svg" alt=""/></a>
+      <a class="footer-arrow" href="#header" alt="Go back to Header"><img src="./assets/images/ico-arrow.svg" alt="Go back to Header" title="Go back to Header"/></a>
     </div>
   </div>
-  <!-- NAVEGADORES FOOTER. Para que el copyright quede a la izquierda en mobile, meterle un flex-direction:column reverse 
-  A los navegadores se les deja caer, deberían posicionarse solos en mobile.
-  En tablet, se ponen ambos divs en row-->
   <div class="footer-content">
     <div class="footer-copy">
       <span>
@@ -23,32 +19,32 @@
       <nav class="articles">
         <ul>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Articles</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Articles</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Books</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Books</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Events</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Events</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Reasons</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Reasons</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Tips</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Tips</a>
           </li>
         </ul>
       </nav>
       <nav class="social">
         <ul>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Twitter</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Twitter</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Instagram</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Instagram</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Link to Adalab" title="Link to Adalab" style="text-decoration: none; color: white;">Mastodon.social</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Mastodon.social</a>
           </li>
         </ul>
       </nav>
