--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,18 +1,16 @@
 <header>
-  <a name="hero" id="hero"></a>
+  <a name="header" id="header"></a>
   <div class="header-menu-container">
-    <!-- ICONO DE HAMBURGUESA -->
-    <div id="menu" class="header-menu-content">
-      <a href="https://adalab.es/" target="_blank"><img src="./assets/images/ico-menu.svg" alt="Menu"/></a>
+    <div>
+      <a class="header-menu" href="https://adalab.es/" target="_blank" alt="Go to Adalab Home" title="Go to Adalab Home"><img src="./assets/images/ico-menu.svg" alt="Menu" title="Menu-Go to Adalab Home"/></a>
     </div>
   </div>
-  <div class="header-container">
+  <div>
     <div class="header-contain">
-      <h1 class="header-title"><span>Anonymous</span> <span>Proxy</span></h1>
+      <h1 class="header-title"><span>Anonymous</span> <span>proxy</span></h1>
       <p class="header-text">In hac habitasse platea dictumst.</p>
-      <!-- ICONO DE LA FLECHA -->
-      <a class="header-arrow" href="#article">
-        <img src="./assets/images/ico-scroll-down.svg" alt="Flecha hacia '3 Reasons To Purchase'" />
+      <a class="header-arrow" href="#article" alt="Go to '3 Reasons To Purchase'">
+        <img src="./assets/images/ico-scroll-down.svg" alt="Go to '3 Reasons To Purchase'" title="Go to '3 Reasons To Purchase'" />
       </a>
     </div>
   </div>
