--- a/_src/assets/scss/core/_footer.scss
+++ b/_src/assets/scss/core/_footer.scss
@@ -1,3 +1,5 @@
+// FOOTER
+
 .footer {
   &-content {
     display: flex;
@@ -37,6 +39,9 @@
       font-size: 14px;
     }
   }
+  &-arrow {
+    padding: 10px 10px 10px 10px;
+  }
   &-arrow-container {
     display: flex;
     justify-content: center;
@@ -62,15 +67,15 @@
 
 @keyframes up {
   0% {
-    transform: translate(0px, -52%);
+    transform: translate(0px, -50%);
   }
 
   50% {
-    transform: translate(0px, -60%);
+    transform: translate(0px, -65%);
   }
 
   100% {
-    transform: translate(0px, -52%);
+    transform: translate(0px, -50%);
   }
 }
 
@@ -88,7 +93,6 @@
     }
     &-copy {
       width: 210px;
-      height: 60px;
       margin-right: 30px;
       margin-left: 39px;
     }
@@ -98,9 +102,7 @@
 @media all and (max-width: 768px) {
   .footer {
     &-content {
-      display: flex;
       flex-direction: column-reverse;
-      justify-content: center;
     }
     &-navs {
       flex-direction: column;
