--- a/_src/templates/partials/_article.html
+++ b/_src/templates/partials/_article.html
@@ -2,7 +2,7 @@
   <a name="article" id="article"></a>
   <div class="article-container">
     <div class="item1">
-      <h2 class="article-title">3 Reasons To Purchase</h2>
+      <h2 class="article-title">3 Reasons to purchase</h2>
     </div>
     <div class="item2">
       <h3 class="article-subtitle">Ut sed metus</h3>
@@ -17,8 +17,7 @@
       <p class="article-text">Aliquam in dolor et dolor tincidunt.</p>
     </div>
     <div class="item5">
-      <!-- botón naranja de More Reasons -->
-      <a class="article-button-text" href="" style="text-decoration: none; color: white">more reasons</a>
+      <a class="article-button-text" href="https://adalab.es/desarrollador-front-end/" target="_blank" style="text-decoration: none; color: white" alt="Go to Adalab" title="Go to Adalab">More reasons</a>
     </div>
   </div>
 </article>
