--- a/_src/templates/partials/_section.html
+++ b/_src/templates/partials/_section.html
@@ -1,13 +1,12 @@
 <section>
   <div class="section-container">
     <div class="section-content">
-      <small class="section-small-text">Insomnia Tips</small>
-      <h2 class="section-title">Looking Through A Window</h2>
+      <small class="section-small-text">Insomnia tips</small>
+      <h2 class="section-title">Looking through a window</h2>
       <p class="section-text">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
-      <!-- BOTON DE GO -->
-      <div class="section-button"><a href=""></a>Go</div>
+      <div class="section-button"><a class="section-button-text" style="text-decoration: none; color: #f26002;" href="https://giphy.com/gifs/reaction-mood-iFnBpFxFGetn8BH0vZ/tile" target="_blank" alt="Link to Giphy" title="What note does this website deserve?">Go</a></div>
     </div>
   </div>
 </section>
