clean the code and run docs

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -19,32 +19,32 @@
       <nav class="articles">
         <ul>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Articles</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Articles</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Books</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Books</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Events</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Events</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Reasons</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Reasons</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Tips</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Tips</a>
           </li>
         </ul>
       </nav>
       <nav class="social">
         <ul>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Twitter</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Twitter</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Instagram</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Instagram</a>
           </li>
           <li style="list-style-type: none;">
-            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" style="text-decoration: none; color: white;">Mastodon.social</a>
+            <a href="https://adalab.es/" alt="Go to Adalab" title="Go to Adalab" target="_blank" style="text-decoration: none; color: white;">Mastodon.social</a>
           </li>
         </ul>
       </nav>
