--- a/_src/assets/scss/core/_header.scss
+++ b/_src/assets/scss/core/_header.scss
@@ -81,9 +81,7 @@
     }
     &-text {
       width: 360px;
-      height: 32px;
       margin-top: 20px;
-      margin-bottom: 30px;
     }
     &-arrow {
       margin-bottom: 45px;
@@ -98,6 +96,7 @@
       height: 110px;
       line-height: 1.31;
       font-size: 42px;
+      text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
     }
     &-text {
       font-size: 16px;
