Done new-section, styles and mediaqueries

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "core/settings";
 @import "components/page";
 @import "core/header";
+@import "core/new-section";
 @import "core/section";
 @import "core/article";
 @import "core/footer";
