--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,6 +4,7 @@
   <body>
     <div>
       <partial src="_header.html" title="Anonymous Proxy"></partial>
+      <partial src="_new-section.html" title=""></partial>
       <partial src="_section.html" title=""></partial>
       <partial src="_article.html" title=""></partial>
       <partial src="_footer.html" title=""></partial>
